# gof23-cpp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .prettierrc.json  CMakeLists.txt  CMakePresets.json  README.md  general_worksheet.md  vpkg.json
src/01_singleton/: main.cpp  singleton.cpp  singleton.h  worksheet.md
src/01_singleton/tests/: singleton.test.cpp
src/02_factory_method/: factory_method.cpp  factory_method.h  main.cpp  worksheet.md
src/02_factory_method/tests/: factory_method.test.cpp
src/03_abstract_factory/: abstract_factory.cpp  abstract_factory.h  main.cpp  worksheet.md
src/03_abstract_factory/tests/: abstract_factory.test.cpp
src/04_builder/: builder.cpp  builder.h  main.cpp  worksheet.md
src/04_builder/tests/: builder.test.cpp
src/05_prototype/: main.cpp  prototype.cpp  prototype.h  worksheet.md
src/05_prototype/tests/: prototype.test.cpp
src/06_adapter/: adapter.cpp  adapter.h  main.cpp  worksheet.md
src/06_adapter/tests/: adapter.test.cpp
src/07_bridge/: bridge.cpp  bridge.h  main.cpp  worksheet.md
src/07_bridge/tests/: bridge.test.cpp
src/08_composite/: composite.cpp  composite.h  main.cpp  worksheet.md
src/08_composite/tests/: composite.test.cpp
src/09_decorator/: decorator.cpp  decorator.h  main.cpp  worksheet.md
src/09_decorator/tests/: decorator.test.cpp
src/10_facade/: facade.cpp  facade.h  main.cpp  worksheet.md
src/10_facade/tests/: facade.test.cpp
src/11_flyweight/: flyweight.cpp  flyweight.h  main.cpp  worksheet.md
src/11_flyweight/tests/: flyweight.test.cpp
src/12_proxy/: main.cpp  proxy.cpp  proxy.h  worksheet.md
src/12_proxy/tests/: proxy.test.cpp
src/13_chain_of_responsibility/: chain_of_responsibility.cpp  chain_of_responsibility.h  main.cpp  worksheet.md
src/13_chain_of_responsibility/tests/: chain_of_responsibility.test.cpp
src/14_command/: command.cpp  command.h  main.cpp  worksheet.md
src/14_command/tests/: command.test.cpp
src/helpers/: StdoutCaptureGuard.h
